# Gen-AI--1

./: .gitignore  Dockerfile  Readme.md  pyproject.toml  setup.py
pipeline/: build_pipeline.py
src/: recommender.py
utils/: logger.py
